kyverno/baseline/require-network-policy/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: namespace-no-network-policy-label
  labels:
    dagon.io/managed: "true"
    dagon.io/tenant-id: "11111111-1111-1111-1111-111111111111"
    dagon.io/compliance-tier: "soc2"
    dagon.io/environment: "dev"
---
apiVersion: v1
kind: Namespace
metadata:
  name: namespace-with-network-policy-label
  labels:
    dagon.io/managed: "true"
    dagon.io/tenant-id: "11111111-1111-1111-1111-111111111111"
    dagon.io/compliance-tier: "soc2"
    dagon.io/environment: "dev"
    dagon.io/network-policy: "enforced"
